# codewithqt

./: CMakeLists.txt  README.md
project0/: main.cpp
project1/: CMakeLists.txt  main.cpp
project2/: CMakeLists.txt  main.cpp
